--- a/wxcard/package.json
+++ b/wxcard/package.json
@@ -13,6 +13,7 @@
     "node-sass": "^4.5.3",
     "vue": "^2.3.3",
     "vue-router": "^2.6.0",
+    "vue-validator": "^3.0.0-alpha.2",
     "vuex-i18n": "^1.6.0",
     "vux": "^2.5.8"
   },
