--- a/wxcard/package.json
+++ b/wxcard/package.json
@@ -14,8 +14,6 @@
     "node-sass": "^4.5.3",
     "vue": "^2.3.3",
     "vue-router": "^2.6.0",
-    "vue-validator": "^3.0.0-alpha.2",
-    "vuex-i18n": "^1.6.0",
     "vux": "^2.5.8"
   },
   "devDependencies": {
@@ -57,7 +55,8 @@
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.18.0",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+    "weixin-js-sdk": "^1.2.0"
   },
   "engines": {
     "node": ">= 4.0.0",
